# tv3

./: .coverage  .gitignore  CLAUDE.md  README.md  TESTING.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py
.github/workflows/: codeql-analysis.yml  pythonapp.yml
src/: __init__.py  terminal_velocity.py  tv_notebook.py  urwid_ui.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_terminal_velocity.py  test_tv_notebook.py  test_urwid_ui.py
